# SimpleVirtualNetwork

./: .gitignore  README.md  build.gradle.kts  deps.txt
app/: build.gradle.kts
nativevpn/: build.gradle.kts  deps.txt
nativevpn/src/main/cpp/: CMakeLists.txt  README.md  androidhelpers.c  global.h  nativevpn.c  nativevpn.h
nativevpn/src/main/cpp/cmake/modules/: CommonAndroidSetup.cmake  FindCygwin.cmake  FindIconv.cmake  FindMsys.cmake  FindOpenSSL.cmake  Findsodium.cmake  Findzlib.cmake  Findzlib_del.cmake  download.cmake  hamcore_builder.cmake
nativevpn/src/main/cpp/include/: androidhelpers.h
nativevpn/src/main/java/ru/valishin/nativevpn/: NativeVpn.kt
